Fix z-index issues

--- a/browser_debug.css
+++ b/browser_debug.css
@@ -2,6 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 9980 !important;
 }
 
 #browser_debug_inner {
